# onpier-commandor

./: .env.example  .gitignore  Makefile  pyproject.toml
.run/: docdb-commandor update.run.xml
cli/: main.py  models.py
cli/k8s/: k8s_pods.py
commandor/src/cli/: enums.py  main.py
commandor/src/cli/k8s/: k8s_common_utils.py  k8s_pods.py  k8s_secrets.py  manifests.py
commandor/src/cli/utils/: aws_utils.py
docdb_connector/: Dockerfile  README.md  requirements.txt
docdb_connector/src/: run.py
docdb_connector/src/docdb_connector/: api.py  config.py  decorators.py  deps.py  enums.py  exceptions.py  extensions.py  logging.py  main.py  metrics.py  middlewares.py  models.py  scheduler.py  startup.py
docdb_connector/src/docdb_connector/argo/: models.py  service.py  views.py
docdb_connector/src/docdb_connector/common/: managers.py
docdb_connector/src/docdb_connector/common/utils/: cli.py
docdb_connector/src/docdb_connector/database/: crud.py  interface.py  mongodb.py
docdb_connector/src/docdb_connector/db_bot/: models.py  service.py  views.py
docdb_connector/src/docdb_connector/plugins/base/: __init__.py  manager.py
docdb_connector/src/docdb_connector/search/: models.py  views.py
docdb_migrator/: Dockerfile  index.js  package.json
onpier_commandor/: enums.py  main.py  requirements.txt
onpier_commandor/k8s/: k8s_common_utils.py  k8s_pods.py  k8s_secrets.py
onpier_commandor/utils/: aws_utils.py
scripts/: kill_ports.sh  port_forward_docdb.sh  port_forward_pids.txt  update_kubeconfig.sh
(+44 files in other folders)
