[tool.poetry]
name = "onpier-commandor"
version = "0.1.0"
description = ""
authors = ["hassnat <hassnatahmadpk@gmail.com>"]
readme = "README.md"
packages = [{include = "onpier_commandor"}]

[tool.poetry.scripts]
onpier = "onpier_commandor.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
kubernetes = "^26.1.0"
python-dotenv = "^1.0.0"
pygithub = "^1.58.1"
httpx = "^0.23.3"
gitpython = "^3.1.31"
diagrams = "^0.23.3"
jira = "^3.5.0"
pydantic = "^1.10.7"
hvac = {extras = ["parser"], version = "^1.1.0"}
joblib = "^1.2.0"
boto3 = "^1.26.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
